# data-structs

ArrayList/: CMakeLists.txt
ArrayList/include/: array_list.h  arraylist.h
ArrayList/src/: main.cpp
Arvore AVL/include/: tree.h
Arvore Binaria de Busca/: CMakeLists.txt
Arvore Binaria de Busca/include/: arvore_binaria.h  no.h
Arvore Binaria de Busca/src/: arvore_binaria.cpp  main.cpp
Arvore Vermelho-Preto/: CMakeLists.txt  arvore-vermelho-preto.txt
Arvore Vermelho-Preto/include/: arvore_vp.h  no.h
Arvore Vermelho-Preto/src/: main.cpp
Fila/: CMakeLists.txt
Fila de Prioridade/: CMakeLists.txt
Fila de Prioridade/include/: fila.h
Fila de Prioridade/src/: main.cpp
Fila/include/: fila.h  no.h
Fila/src/: main.cpp  no.cpp
HashMap/: CMakeLists.txt
HashMap/include/: hashmap.h  linkedlist.h  no.h  pessoa.h  registro.h
HashMap/src/: main.cpp
Lista Duplamente Encadeada/: CMakeLists.txt
Lista Duplamente Encadeada/include/: linkedlist.h  no.h
Lista Duplamente Encadeada/src/: main.cpp  pessoa.cpp
Lista Encadeada Simples/: CMakeLists.txt
Lista Encadeada Simples/include/: linkedlist.h  no.h
Lista Encadeada Simples/src/: main.cpp
Pilha/: CMakeLists.txt
Pilha/include/: no.h  pilha.h
Pilha/src/: main.cpp
avl-tree/include/: node.h  tree.h
avl-tree/src/: main.cpp
binary-search-tree/include/: node.h  tree.h
binary-search-tree/src/: main.cpp
bloom-filter/include/: bloom_filter.h
bloom-filter/src/: main.cpp
btree/include/: btree.hpp  invalid_min_degree_exception.hpp  partition.hpp
btree/src/: main.cpp  (+1 more)
hyperloglog/: go.mod
(+38 files in other folders)
